--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta lang="en" charset="utf-8">
+        <title>Blog - Test</title>
+    </head>
+    <body>
+
+    </body>
+</html>
